<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/function"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_auto_air_conditioner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_air_conditioner"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_fire_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fire_alert"
            android:textSize="18sp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_pump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pump"
            android:textSize="18sp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_call_firefighter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_firefighters"
            android:textSize="18sp"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>